# sentinel

./: .gitignore  Cargo.toml  README.md  install.sh  memsentinel.toml  uninstall.sh
.github/workflows/: ci.yml
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/cli/tests/: hello.rs  status_golden.rs  top_golden.rs
crates/core/: Cargo.toml
crates/core/src/: actions.rs  cgroups.rs  config.rs  config_test.rs  lib.rs  mem.rs  policy.rs  policy_test.rs  procinfo.rs  psi.rs  reserve.rs  reserve_test.rs
crates/daemon/: Cargo.toml
crates/daemon/src/: main.rs
docs/: ARCHITECTURE.md  TUNING.md  USAGE.md  UX.md
packaging/: container-host.toml  no-swap.toml  sentinel.example.toml  server.toml  workstation.toml
packaging/systemd/: sentinel.service  sentinel.slice
