[package]
name = "sentinel"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
signal-hook = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
procfs = { workspace = true }
sentinel-core = { path = "../core" }
clap = { workspace = true }
libc = { workspace = true }
